<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/topText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/topText" />

    <EditText
        android:id="@+id/textInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topText" />

    <TextView
        android:id="@+id/keyText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInput"
        android:text="@string/keyText" />

    <EditText
        android:id="@+id/keyInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keyText" />

    <Button
        android:id="@+id/btnEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/keyInput"
        android:text="@string/encryptText" />

    <TextView
        android:id="@+id/cryptedText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEncrypt"
        android:paddingTop="20dp"
        android:text="@string/cryptedText"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cryptedText"
        android:text="@string/output" />

    <Button
        android:id="@+id/btnDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/outputText"
        android:text="@string/decryptText" />

</RelativeLayout>